--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.fwingy.littleflickr">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,10 @@
             android:parentActivityName=".Activities.MainActivity">
 
         </activity>
+
+        <service android:name=".Services.DownloadService"
+                 android:enabled="true"
+                 android:exported="true" />
     </application>
 
 </manifest>
