--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/flickr_icon"
@@ -29,6 +30,11 @@
         <service android:name=".Services.DownloadService"
                  android:enabled="true"
                  android:exported="true" />
+
+        <service android:name=".Services.DownloadCacheService"
+                 android:enabled="true"
+                 android:exported="true" />
+
     </application>
 
 </manifest>
