--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
