--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.googlecode.flickrj-android:flickrj-android:2.1.0'
+    compile 'org.slf4j:slf4j-android:1.7.25'
 }
