--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 
     <application
@@ -13,8 +14,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="sample-oauth" />
+            </intent-filter>
 
+
+        </activity>
+
+        <activity android:name=".Activities.DetailActivity"
+            android:parentActivityName=".Activities.MainActivity">
+
+        </activity>
+
+        <activity android:name=".Activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,10 +39,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activities.DetailActivity"
-            android:parentActivityName=".Activities.MainActivity">
-
-        </activity>
 
         <service android:name=".Services.DownloadService"
                  android:enabled="true"
